--- a/index.html
+++ b/index.html
@@ -3,49 +3,61 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shreyashi Raj - Landing Page</title>
+    <title>Travel with Shreyashi</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header id="main-header">
+    <header>
         <div class="container">
-            <h1>Shreyashi Raj</h1>
-            <p>3rd Year CSE Student at KIIT University</p>
-            <a href="#about" class="btn">Learn More</a>
+            <h1>Travel with Shreyashi</h1>
+            <p>Explore the world through my lens</p>
         </div>
     </header>
 
     <section id="about" class="section">
         <div class="container">
             <h2>About Me</h2>
-            <p>Hi! I'm Shreyashi Raj, a third-year Computer Science and Engineering student at KIIT University. I have a passion for software development and have gained basic knowledge in various technologies.</p>
+            <p>Hi! I'm Shreyashi, a 3rd year CSE student with a passion for traveling and photography. Join me on my journey as I capture moments from around the globe.</p>
         </div>
     </section>
 
-    <section id="skills" class="section bg-light">
+    <section id="destinations" class="section bg-light">
         <div class="container">
-            <h2>Skills</h2>
-            <div class="skills-list">
-                <div class="skill">HTML</div>
-                <div class="skill">CSS</div>
-                <div class="skill">JavaScript</div>
-                <div class="skill">Java</div>
-                <div class="skill">Data Structures and Algorithms (DSA)</div>
+            <h2>Featured Destinations</h2>
+            <div class="destination">
+                <img src="destination1.jpg" alt="Destination 1">
+                <h3>Paris, France</h3>
+                <p>Experience the charm of the City of Love</p>
+            </div>
+            <div class="destination">
+                <img src="destination2.jpg" alt="Destination 2">
+                <h3>Santorini, Greece</h3>
+                <p>Explore the stunning landscapes and sunsets</p>
+            </div>
+            <div class="destination">
+                <img src="destination3.jpg" alt="Destination 3">
+                <h3>Bali, Indonesia</h3>
+                <p>Discover the cultural richness and natural beauty</p>
             </div>
         </div>
     </section>
 
     <section id="contact" class="section">
         <div class="container">
-            <h2>Contact</h2>
-            <p>Phone: 9153121610</p>
-            <p>Email: <a href="mailto:shreyashiraj280303@gmail.com">shreyashiraj280303@gmail.com</a></p>
+            <h2>Contact Me</h2>
+            <p>Let's connect and plan your next adventure together!</p>
+            <div class="contact-form">
+                <input type="text" placeholder="Your Name">
+                <input type="email" placeholder="Your Email">
+                <textarea placeholder="Your Message"></textarea>
+                <button class="btn">Send Message</button>
+            </div>
         </div>
     </section>
 
     <footer>
         <div class="container">
-            <p>&copy; 2024 Shreyashi Raj. All rights reserved.</p>
+            <p>&copy; 2024 Travel with Shreyashi. All rights reserved.</p>
         </div>
     </footer>
 </body>
